--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       </article>
       <!-- Thailand -->
       <article class="card">
-        <img src="https://images.unsplash.com/photo-1518544801976-3e188ea1f9c4?q=80&w=1200&auto=format&fit=crop" alt="Longtail boats on turquoise water in Thailand" />
+        <img src="https://unsplash.com/photos/aerial-view-of-industry-ring-suspending-bridge-at-night-in-bangkok-thailand-Iyya15yDMYE" />
         <div class="pad">
           <div class="chip">🇹🇭 Thailand</div>
           <h3>Bangkok & Phuket</h3>
