--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       </article>
       <!-- Thailand -->
       <article class="card">
-        <img src="https://unsplash.com/photos/aerial-view-of-industry-ring-suspending-bridge-at-night-in-bangkok-thailand-Iyya15yDMYE" />
+        <img src="https://unsplash.com/photos/aerial-view-of-industry-ring-suspending-bridge-at-night-in-bangkok-thailand-Iyya15yDMYE" alt=" Suspending bridge at night in Bangkok" />
         <div class="pad">
           <div class="chip">🇹🇭 Thailand</div>
           <h3>Bangkok & Phuket</h3>
