--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       </article>
       <!-- Thailand -->
       <article class="card">
-        <img src="https://unsplash.com/photos/orange-temples-during-daytime-B64B6-kAWlw" alt=" Suspending bridge at night in Bangkok" />
+        <img src="https://unsplash.com/photos/orange-temples-during-daytime-B64B6-kAWlw" alt="Golden Temple in Bangkok" />
         <div class="pad">
           <div class="chip">🇹🇭 Thailand</div>
           <h3>Bangkok & Phuket</h3>
