--- a/index.html
+++ b/index.html
@@ -102,9 +102,7 @@
 <header class="nav">
   <div class="container nav-inner">
     <a href="#home" class="brand" aria-label="Halloluwa Tours home">
-      <div class="brand-mark" aria-hidden="true">
-        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3.2 11.2l16.6-7a.6.6 0 01.8.77l-6.2 16.9a.6.6 0 01-1.11.03l-2.7-6.1-6.1-2.7a.6.6 0 01.03-1.1z" stroke="currentColor" stroke-width="1.4"/><path d="M9.8 14.9l9.1-9.1" stroke="currentColor" stroke-width="1.4"/></svg>
-      </div>
+      <div class="brand-mark" aria-hidden="true"><img src="images/logo/Logo.png" alt="" role="presentation"></div>
       <span>Halloluwa Tours</span>
     </a>
     <nav aria-label="Main">
