--- a/index.html
+++ b/index.html
@@ -10,39 +10,40 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <style>
     :root{
-      --bg:#0f172a;           /* slate-900 */
-      --surface:#0b1b2a;      /* deep blue */
-      --muted:#93a4b8;        /* slate-400 */
-      --text:#e6eef5;
-      --brand:#19b2ff;        /* sky */
-      --accent:#00e0a4;       /* lagoon */
-      --gold:#f3c969;         /* highlight */
-      --card: rgba(255,255,255,.06);
-      --border: rgba(255,255,255,.14);
+      --bg:#f6f8fb;
+      --surface:#ffffff;
+      --muted:#5b6b7b;
+      --text:#0f172a;
+      --brand:#0b7bdc;
+      --accent:#00b894;
+      --gold:#b8860b;
+      --card:#ffffff;
+      --border:#e5eaf0;
       --radius: 18px;
-      --shadow: 0 16px 40px rgba(0,0,0,.35);
+      --shadow: 0 8px 24px rgba(16,24,40,.08);
     }
     *{box-sizing:border-box}
     html,body{height:100%}
-    body{margin:0;background:linear-gradient(180deg,#0b1220, #0e2030 40%, #0b1220);color:var(--text);font-family:Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial}
+    body{margin:0;background:linear-gradient(180deg,#ffffff, #f6f8fb 60%, #eef3f9);color:var(--text);font-family:Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial}
     a{color:inherit}
     img{max-width:100%;display:block}
 
     /* Layout */
     .container{max-width:1200px;margin:0 auto;padding:0 1.25rem}
     header.nav{
-      position:sticky;top:0;z-index:60;backdrop-filter:saturate(140%) blur(10px);
-      background: rgba(5,12,22,.6); border-bottom:1px solid var(--border);
+      position:sticky;top:0;z-index:60;backdrop-filter:saturate(140%) blur(8px);
+      background: rgba(255,255,255,.85); border-bottom:1px solid var(--border);
     }
     .nav-inner{display:flex;align-items:center;justify-content:space-between;gap:1rem;padding:.8rem 0}
     .brand{display:flex;align-items:center;gap:.7rem;font-weight:800;letter-spacing:.4px}
     .brand-mark{width:40px;height:40px;border-radius:12px;border:1px solid var(--border);display:grid;place-items:center;background:linear-gradient(145deg, rgba(255,255,255,.12), rgba(255,255,255,.02))}
-    .brand svg{width:22px;height:22px}
+    $1
+    .brand-mark img{width:26px;height:26px;display:block;object-fit:contain}
     .brand span{font-family:Poppins, Inter, sans-serif;font-size:1.05rem}
     nav ul{display:flex;gap:1rem;list-style:none;margin:0;padding:0}
     nav a{padding:.55rem .8rem;border-radius:10px;text-decoration:none;color:var(--text);border:1px solid transparent}
-    nav a:hover{border-color:var(--border);background:rgba(255,255,255,.06)}
-    .cta{background:linear-gradient(135deg,var(--brand),var(--accent));color:#04121b;border:none;padding:.7rem 1rem;border-radius:12px;font-weight:700;letter-spacing:.2px;cursor:pointer}
+    nav a:hover{border-color: var(--brand);background: rgba(11,123,220,.08)}
+    .cta{background:linear-gradient(135deg,var(--brand),var(--accent));color:#ffffff;border:none;padding:.7rem 1rem;border-radius:12px;font-weight:700;letter-spacing:.2px;cursor:pointer}
 
     /* Hero */
     .hero{position:relative;overflow:hidden}
@@ -52,14 +53,14 @@
             url('https://images.unsplash.com/photo-1526778548025-fa2f459cd5c1?q=80&w=1600&auto=format&fit=crop') center/cover no-repeat;
       filter:saturate(1.1) contrast(1.05)
     }
-    .hero .overlay{position:absolute;inset:0;background:linear-gradient(180deg, rgba(5,12,22,.55), rgba(5,12,22,.85))}
+    .hero .overlay{position:absolute;inset:0;background:linear-gradient(180deg, rgba(255,255,255,.65), rgba(255,255,255,.85))}
     .hero .content{padding:96px 0 72px}
     .badge{display:inline-flex;align-items:center;gap:.5rem;border:1px solid var(--border);border-radius:999px;background:rgba(255,255,255,.06);padding:.4rem .7rem;font-size:.9rem;color:#cfe7f7}
     .badge b{color:var(--gold)}
     h1.hero-title{font-family:Poppins, Inter, sans-serif;font-weight:800;letter-spacing:.4px;font-size:clamp(1.8rem,4.6vw,3.2rem);margin:.6rem 0 .4rem}
-    .hero-sub{max-width:840px;color:#d6e7f5;line-height:1.6;font-size:1.05rem}
+    .hero-sub{max-width:840px;color:var(--muted);line-height:1.6;font-size:1.05rem}
     .hero-actions{display:flex;gap:.75rem;flex-wrap:wrap;margin-top:1.1rem}
-    .btn-outline{border:1px solid var(--border);background:rgba(255,255,255,.06);color:var(--text);padding:.75rem 1rem;border-radius:12px;font-weight:700}
+    .btn-outline{border:1px solid var(--brand);background:#fff;color:var(--brand);padding:.75rem 1rem;border-radius:12px;font-weight:700}
 
     /* Sections */
     section{scroll-margin-top:80px}
@@ -75,6 +76,8 @@
     .chip{display:inline-flex;align-items:center;gap:.4rem;border:1px solid var(--border);background:rgba(255,255,255,.06);border-radius:999px;padding:.25rem .55rem;font-size:.8rem}
 
     .price{font-weight:800;font-size:1.2rem;color:var(--gold)}
+
+    .muted{color:var(--muted)}
 
     /* Timeline */
     .timeline{display:grid;gap:1rem}
@@ -102,7 +105,7 @@
 <header class="nav">
   <div class="container nav-inner">
     <a href="#home" class="brand" aria-label="Halloluwa Tours home">
-      <div class="brand-mark" aria-hidden="true"><img src="images/logo/Logo.png" alt="" role="presentation"></div>
+      <div class="brand-mark" aria-hidden="true"><img src="images/logo/logo.png" alt="" role="presentation"></div>
       <span>Halloluwa Tours</span>
     </a>
     <nav aria-label="Main">
@@ -151,7 +154,7 @@
       </article>
       <!-- Thailand -->
       <article class="card">
-        <img src="GoldenTemple.jpg" alt="Golden Temple in Bangkok" />
+        <img src="https://images.unsplash.com/photo-1518544801976-3e188ea1f9c4?q=80&w=1200&auto=format&fit=crop" alt="Longtail boats on turquoise water in Thailand" />
         <div class="pad">
           <div class="chip">🇹🇭 Thailand</div>
           <h3>Bangkok & Phuket</h3>
@@ -338,7 +341,7 @@
   <div class="container cols">
     <div>
       <div class="brand" style="margin-bottom:.4rem">
-        <div class="brand-mark" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3.2 11.2l16.6-7a.6.6 0 01.8.77l-6.2 16.9a.6.6 0 01-1.11.03l-2.7-6.1-6.1-2.7a.6.6 0 01.03-1.1z" stroke="currentColor" stroke-width="1.4"/><path d="M9.8 14.9l9.1-9.1" stroke="currentColor" stroke-width="1.4"/></svg></div>
+        <div class="brand-mark" aria-hidden="true"><img src="images/logo/logo.png" alt="" role="presentation"></div>
         <span>Halloluwa Tours</span>
       </div>
       <p class="muted">Group tours from Sri Lanka to India, Thailand, Singapore, and Malaysia. © <span id="year">2025</span></p>
@@ -372,7 +375,6 @@
       if(el){ e.preventDefault(); el.scrollIntoView({behavior:'smooth'}); }
     })
   });
-
   document.getElementById('year').textContent = new Date().getFullYear();
 </script>
 </body>
