--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     .logo {
       display: flex;
       align-items: center;
-      text-decoration: none; /* Ensure logo link isn't underlined */
+      text-decoration: none;
     }
 
     .logo img {
@@ -80,7 +80,7 @@
       text-transform: uppercase;
     }
 
-    #nav-links { /* Changed from nav ul */
+    #nav-links {
       display: flex;
       list-style: none;
     }
@@ -104,7 +104,7 @@
       border-bottom-color: var(--secondary-color);
     }
 
-    /* Hamburger Menu - NEW */
+    /* Hamburger Menu */
     .hamburger {
       display: none;
       cursor: pointer;
@@ -124,7 +124,7 @@
     /* Hero Section */
     #home {
       height: 100vh;
-      background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://images.unsplash.com/photo-1528181304800-259b08848526?q=80&w=2070&auto=format&fit=crop') no-repeat center center/cover;
+      background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://images.unsplash.com/photo-1528181304800-259b08848526?q=80&w=2070&auto-format&fit=crop') no-repeat center center/cover;
       color: #fff;
       display: flex;
       flex-direction: column;
@@ -236,25 +236,6 @@
       color: var(--primary-color);
     }
 
-    /* Gallery Section */
-    .gallery-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 15px;
-    }
-
-    .gallery-item img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 8px;
-      transition: transform 0.3s ease;
-    }
-
-    .gallery-item img:hover {
-      transform: scale(1.05);
-    }
-
     /* Contact Section */
     #contact-form {
       max-width: 700px;
@@ -290,10 +271,10 @@
       padding: 30px 0;
     }
 
-    /* Responsive Design - UPDATED FOR HAMBURGER */
+    /* Responsive Design */
     @media (max-width: 768px) {
       .hamburger {
-        display: block; /* Show hamburger on mobile */
+        display: block;
       }
 
       .hamburger.active .bar:nth-child(2) {
@@ -308,8 +289,8 @@
 
       #nav-links {
         position: fixed;
-        left: -100%; /* Start off-screen */
-        top: 70px; /* Below the header */
+        left: -100%;
+        top: 70px;
         gap: 0;
         flex-direction: column;
         background-color: var(--header-dark-bg);
@@ -323,7 +304,7 @@
       }
 
       #nav-links.active {
-        left: 0; /* Slide in */
+        left: 0;
       }
 
       #home h1 {
@@ -352,7 +333,6 @@
       <li><a href="#home" class="nav-link">Home</a></li>
       <li><a href="#about" class="nav-link">About Us</a></li>
       <li><a href="#destinations" class="nav-link">Destinations</a></li>
-      <li><a href="#gallery" class="nav-link">Gallery</a></li>
       <li><a href="#contact" class="nav-link">Contact</a></li>
     </ul>
     <button class="hamburger" id="hamburger-button">
@@ -406,20 +386,6 @@
           <img src="https://images.unsplash.com/photo-1528127269322-539801943592?q=80&w=2070&auto=format&fit=crop" alt="Batu Caves in Malaysia">
           <div class="card-content"><h3>Malaysia</h3><p>A country of contrasts, where lush rainforests meet bustling cities. Explore cultural heritage in Penang and the modern marvel of Kuala Lumpur.</p></div>
         </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="gallery">
-    <div class="container">
-      <h2 class="section-title">Memories from Our Tours</h2>
-      <div class="gallery-grid">
-        <div class="gallery-item"><img src="https://images.unsplash.com/photo-1541542159-82604b2c5d63?q=80&w=2070&auto=format&fit=crop" alt="Tourists in India"></div>
-        <div class="gallery-item"><img src="https://images.unsplash.com/photo-1570168007204-dfb528c6958f?q=80&w=1935&auto=format&fit=crop" alt="Floating market in Thailand"></div>
-        <div class="gallery-item"><img src="https://images.unsplash.com/photo-1579733036986-e55541a7f232?q=80&w=2014&auto=format&fit=crop" alt="Singapore skyline"></div>
-        <div class="gallery-item"><img src="https://images.unsplash.com/photo-1542060748-10c28b62716f?q=80&w=2070&auto=format&fit=crop" alt="Group photo"></div>
-        <div class="gallery-item"><img src="https://images.unsplash.com/photo-1589412196621-c52934b5c7e1?q=80&w=1964&auto=format&fit=crop" alt="Temple in Malaysia"></div>
-        <div class="gallery-item"><img src="https://images.unsplash.com/photo-1598380480392-aa79862f16e8?q=80&w=2070&auto=format&fit=crop" alt="Group enjoying a meal"></div>
       </div>
     </div>
   </section>
@@ -487,18 +453,16 @@
       contactForm.reset();
     });
 
-    // --- Hamburger Menu Logic - NEW ---
+    // --- Hamburger Menu Logic ---
     const hamburger = document.getElementById('hamburger-button');
     const navMenu = document.getElementById('nav-links');
     const navMenuLinks = document.querySelectorAll('#nav-links li a');
 
-    // Toggle menu on hamburger click
     hamburger.addEventListener('click', () => {
       hamburger.classList.toggle('active');
       navMenu.classList.toggle('active');
     });
 
-    // Close menu when a link is clicked
     navMenuLinks.forEach(link => {
       link.addEventListener('click', () => {
         hamburger.classList.remove('active');
